# bgCore

./: .gitignore  BgCore.cpp  BgCore.h  BitsManager.cpp  BitsManager.h  CMakeLists.txt  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  Game.cpp  Game.h  GameController.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  PlayerInterface.cpp  PlayerInterface.h  TurnsManager.cpp  TurnsManager.h  main.cpp
events/: CustomEvent.cpp  CustomEvent.h  EventManager.cpp  EventManager.h  OnBitPlacedAt.cpp  OnBitPlacedAt.h  OnPiecePlacedOnBoard.cpp  OnPiecePlacedOnBoard.h  PiecePlacedOnBoard.cpp  PiecePlacedOnBoard.h
gameBits/: BitHolder.cpp  BitHolder.h  BitReference.cpp  BitReference.h  GameBit.cpp  GameBit.h  HexBoard.cpp  HexBoard.h  Piece.cpp  Piece.h  PieceSet.cpp  PieceSet.h
gameChanges/: AddActionOption.cpp  AddActionOption.h  GameChange.cpp  GameChange.h
gameRulesSamples/: Checkers.bgrules  Hive.bgrules
loader/: BGRuleValue.cpp  BGRuleValue.h  GameLoader.cpp  GameLoader.h  ReservedWord.cpp  ReservedWord.h
manual/: ManualLoader.cpp  ManualLoader.h  ManualProperty.cpp  ManualProperty.h  ManualPropertyInteger.cpp  ManualPropertyInteger.h
player/: Player.cpp  Player.h  PlayerController.h  PlayerInterface.h
rules/: ComplexTestableRule.cpp  ComplexTestableRule.h  EnableMovementRule.cpp  EnableMovementRule.h  IsEmpty.cpp  IsEmpty.h  IsRound.cpp  IsRound.h  JumpOverNeighbours.cpp  JumpOverNeighbours.h  MovementFilterRule.cpp  MovementFilterRule.h  OnePiecesGroup.cpp  OnePiecesGroup.h  PlayerAttrComparison.cpp  PlayerAttrComparison.h  Rule.cpp  Rule.h  RulesManager.cpp  RulesManager.h  TestableRule.cpp  TestableRule.h  TimedCondition.cpp  TimedCondition.h  TouchAnotherPieceRule.cpp  TouchAnotherPieceRule.h  hive.rules
tui/: GameTUI.cpp  GameTUI.h  PlayerTUI.cpp  PlayerTUI.h
turns/: Action.cpp  Action.h  ActionOption.cpp  ActionOption.h  ChoosePiece.cpp  ChoosePiece.h  ChoosePieceOnBoard.cpp  ChoosePieceOnSet.cpp  ChoosePieceOnSet.h  ChooseTileOnBoard.cpp  ChooseTileOnBoard.h  MoveBitTo.cpp  MoveBitTo.h  MovePieceOnBoard.cpp  MovePieceOnBoard.h  MultiActions.cpp  MultiActions.h  PutPieceOnBoard.cpp  PutPieceOnBoard.h  State.cpp  (+7 more)
(+52 files in other folders)
